--- a/css/styles.css
+++ b/css/styles.css
@@ -18,4 +18,9 @@ nav form {
 nav .bl-prp-brd {
   width: 140px;
   height: 43px;
-}/*# sourceMappingURL=styles.css.map */
+}
+
+.crayons-logo__image {
+  width: 30px;
+  height: 30px;
+} /*# sourceMappingURL=styles.css.map *//*# sourceMappingURL=styles.css.map */
