--- a/css/styles.scss
+++ b/css/styles.scss
@@ -21,3 +21,8 @@ nav{
         height: 43px;
     }
 }
+
+.crayons-logo__image {
+    width: 30px;
+    height: 30px;
+  }/*# sourceMappingURL=styles.css.map */
