--- a/css/styles.scss
+++ b/css/styles.scss
@@ -22,8 +22,37 @@ nav{
     }
 }
 
-
+.pt{
+    color: black;
+    text-decoration: none;
+}
+.ht{
+    height: 40px;
+    list-style-type: none;
+}
 .crayons-logo__image {
     width: 30px;
     height: 30px;
   }/*# sourceMappingURL=styles.css.map */
+.lft{
+    position: absolute;
+    top: 0;
+    left: 0;
+    background-color:#e8eff5;
+    z-index: 1;
+    button{
+        width: 205px;
+        height: 38px;
+        background-color:white;
+    }
+}
+@media screen and (min-width:"767px") {
+    .lft{
+        position: static;
+        z-index: 0;
+        
+    }
+    
+}
+
+
