--- a/css/styles.scss
+++ b/css/styles.scss
@@ -21,7 +21,9 @@ nav{
         height: 43px;
     }
 }
-
+.ul-not{
+    text-decoration: none;
+}
 .pt{
     color: black;
     text-decoration: none;
@@ -29,6 +31,11 @@ nav{
 .ht{
     height: 40px;
     list-style-type: none;
+}
+.log{
+    width: 205px;
+    height: 38px;
+    background-color:white;
 }
 .crayons-logo__image {
     width: 30px;
@@ -40,11 +47,7 @@ nav{
     left: 0;
     background-color:#e8eff5;
     z-index: 1;
-    button{
-        width: 205px;
-        height: 38px;
-        background-color:white;
-    }
+    
 }
 @media screen and (min-width:"767px") {
     .lft{
