--- a/css/styles.css
+++ b/css/styles.css
@@ -57,4 +57,7 @@ nav .bl-prp-brd {
     position: static;
     z-index: 0;
   }
+  .ham {
+    display: none;
+  }
 }/*# sourceMappingURL=styles.css.map */
