--- a/css/styles.css
+++ b/css/styles.css
@@ -1,5 +1,8 @@
 .bl-prp-bg {
   background-color: rgb(104, 27, 228);
+  color: white;
+  width: 225px;
+  height: 38px;
 }
 
 .bl-prp-brd {
@@ -18,6 +21,10 @@ nav form {
 nav .bl-prp-brd {
   width: 140px;
   height: 43px;
+}
+
+.pink {
+  background-color: rgb(248, 128, 148);
 }
 
 .ul-not {
