--- a/css/styles.scss
+++ b/css/styles.scss
@@ -1,5 +1,8 @@
 .bl-prp-bg{
-    background-color: rgb(104, 27, 228)
+    background-color: rgb(104, 27, 228);
+    color: white;
+    width: 225px;
+    height: 38px;
 }
 .bl-prp-brd{
     border: 1px solid  rgb(104, 27, 228);
@@ -21,7 +24,9 @@ nav{
         height: 43px;
     }
 }
-
+.pink{
+    background-color: rgb(248, 128, 148);
+}
 .ul-not{
     text-decoration: none;
 }
