feat: add footer

--- a/css/styles.scss
+++ b/css/styles.scss
@@ -49,6 +49,16 @@ nav{
     z-index: 1;
     
 }
+
+footer{
+    width: 100vw;
+    height: 30vh;
+    background-color: rgba(21, 8, 138, 0.547);
+}
+
+li{
+    list-style:none
+}
 @media screen and (min-width:"767px") {
     .lft{
         position: static;
