--- a/css/styles.css
+++ b/css/styles.css
@@ -52,6 +52,16 @@ nav .bl-prp-brd {
   z-index: 1;
 }
 
+footer {
+  width: 100vw;
+  height: 30vh;
+  background-color: rgba(21, 8, 138, 0.547);
+}
+
+li {
+  list-style: none;
+}
+
 @media screen and (min-width: 767px) {
   .lft {
     position: static;
