--- a/css/styles.css
+++ b/css/styles.css
@@ -1,7 +1,7 @@
 .bl-prp-bg {
   background-color: rgb(104, 27, 228);
   color: white;
-  width: 225px;
+  width: 328px;
   height: 38px;
 }
 
@@ -56,7 +56,7 @@ nav .bl-prp-brd {
   top: 0;
   left: 0;
   background-color: #e8eff5;
-  z-index: 1;
+  z-index: 1035;
 }
 
 footer {
@@ -76,5 +76,11 @@ li {
   }
   .ham {
     display: none;
+  }
+  .back-f {
+    height: 42vh;
+  }
+  .bl-prp-bg {
+    width: 225px;
   }
 }/*# sourceMappingURL=styles.css.map */
